--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,2 +1,18 @@
 {% extends 'base.html'%}
-<h1>News Highlights</h1>
+{% import 'macros.html' as macro %}
+{% block content%}
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>News Highlights</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <h2>General News</h2>
+            <hr>
+        </div>
+        {{macro.sourceCategories(general)}}
+    </div>
+</div>
+{% endblock%}
