--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -2,6 +2,7 @@
     {% for category in categories %}
         <div class="col-md-3">
             <h3> {{category.name}} </h3>
+            <p> {{category.description}} </p>
         </div>
     {% endfor %}
 {% endmacro %}
