--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,5 +4,8 @@
 {% block styles %} 
 {{ super() }}
 <link href='https://fonts.googleapis.com/css?family=Allura' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Julius Sans One' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Mallanna' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Josefin Sans' rel='stylesheet'>
 <link href="{{url_for('static',filename='css/styles.css')}}" rel="stylesheet"> 
 {% endblock %} 
