--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -1,11 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         {% for article in news %}
-            <div class="col-md-3">
-                <h4> {{article.title}} </h4>
+            <div class="col-md-3 articles-details">
+                <img src={{article.urlToImage}} alt="IMAGE LOADING...">
+                <div class="words">
+                    <h4 class="text-bold"> {{article.title}} </h4>
+                    <p class="small"> - {{article.author}}  {{article.publishedAt}} </p>
+                    <hr>
+                    <p> {{article.description}} ..<a href={{article.url}} target="_blank">Read More</a> </p>                    
+                </div>
             </div>
         {% endfor %}
     </div>
