--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% import 'macros.html' as macro %}
 
 {% block content%}
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-md-12 heading">
             <h1>News Highlights</h1>
