--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navMain">
     <div class="container">
-        <a class="smooth-scroll" href="/">Home</a>
+        <a class="smooth-scroll" href="/#top">Home</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu
             <i class="fa fa-bars"></i>
@@ -8,10 +8,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link smooth-scroll" href="#about">About</a>
+                    <a class="nav-link smooth-scroll" href="/#business">Business</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link smooth-scroll" href="#play-now">PLAY!</a>
+                    <a class="nav-link smooth-scroll" href="/#entertainment">Entertainment</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link smooth-scroll" href="/#sports">Sports</a>
                 </li>
             </ul>
         </div>
