--- a/app/templates/everything.html
+++ b/app/templates/everything.html
@@ -3,8 +3,8 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12 heading">
-            <form action="">
-                <input type="text" name="movie_query" placeholder="Search for a movie" class="form-control">
+            <form action="submit" id="search">
+                <input type="text" name="search_query" placeholder="Search Topic" class="form-control">
                 <input type="submit" value="submit" class="btn btn-warning">
             </form>
             <h1> {{name}} </h1>
@@ -13,7 +13,9 @@
     <div class="row">
         {% for article in news %}
         <div class="col-md-3 articles-details">
-            <img src={{article.urlToImage}} alt="IMAGE LOADING...">
+            <a href={{article.url}} target="_blank">
+                <img src={{article.urlToImage}} alt="IMAGE LOADING..." class="img-responsive">
+            </a>
             <div class="words">
                 <h4 class="text-bold"> {{article.title}} </h4>
                 <p class="small">- {{article.author}} </p>
