--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-
+{% extends 'base.html' %} 
 {% block content %}
 <div class="container-fluid">
     <div class="row">
@@ -9,16 +8,20 @@
     </div>
     <div class="row">
         {% for article in news %}
-            <div class="col-md-3 articles-details">
+        <div class="col-md-3 articles-details">
+            <a href={{article.url}} target="_blank">
                 <img src={{article.urlToImage}} alt="IMAGE LOADING...">
-                <div class="words">
-                    <h4 class="text-bold"> {{article.title}} </h4>
-                    <p class="small">- {{article.author}} </p>
-                    <p class="small">Posted on {{article.publishedAt}}</p>
-                    <hr>
-                    <p> {{article.description}}...<a href={{article.url}} target="_blank">Read More</a> </p>                    
-                </div>
+            </a>
+            <div class="words">
+                <h4 class="text-bold"> {{article.title}} </h4>
+                <p class="small">- {{article.author}} </p>
+                <p class="small">Posted on {{article.publishedAt}}</p>
+                <hr>
+                <p> {{article.description}}...
+                    <a href={{article.url}} target="_blank">Read More</a>
+                </p>
             </div>
+        </div>
         {% endfor %}
     </div>
 </div>
