Final Changes * Adding the ReadMe.md * Adding the Specs.md * Adding loading limit to the files

--- a/app/templates/everything.html
+++ b/app/templates/everything.html
@@ -28,5 +28,10 @@
         </div>
         {% endfor %}
     </div>
+    <div class="container">
+        <div class="row">
+            <button class="btn btn-warning" action="{{url_for(/everything&50)}}">Load More</button>
+        </div>
+    </div>
 </div>
 {% endblock%}
